// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CloudFront > Should map AWS::CloudFront::CloudFrontOriginAccessIdentity 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudfront_origin_access_identity": {
      "resource_22C949BF": {
        "comment": "test"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cloudfront_origin_access_identity.resource_22C949BF.id, \\",\\", aws_cloudfront_origin_access_identity.resource_22C949BF.s3_canonical_user_id])}",
      "type": "string"
    }
  }
}"
`;

exports[`CloudFront > Should map AWS::CloudFront::Distribution 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "resource_22C949BF": {
        "aliases": [
          "example.com",
          "cnames.com"
        ],
        "comment": "My CloudFront distribution",
        "continuous_deployment_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
        "custom_error_response": [
          {
            "error_caching_min_ttl": 300,
            "error_code": 404,
            "response_code": 200,
            "response_page_path": "/index.html"
          }
        ],
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD"
          ],
          "cache_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
          "cached_methods": [
            "GET",
            "HEAD"
          ],
          "compress": true,
          "default_ttl": 3600,
          "field_level_encryption_id": "1234567890abcdef1234567890abcdef",
          "forwarded_values": {
            "cookies": {
              "forward": "none",
              "whitelisted_names": [
                "*"
              ]
            },
            "headers": [
              "*"
            ],
            "query_string": false,
            "query_string_cache_keys": [
              "*"
            ]
          },
          "function_association": [
            {
              "event_type": "viewer-request",
              "function_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
            }
          ],
          "grpc_config": {
            "enabled": true
          },
          "lambda_function_association": [
            {
              "event_type": "origin-request",
              "include_body": true,
              "lambda_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
            }
          ],
          "max_ttl": 86400,
          "min_ttl": 0,
          "origin_request_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
          "realtime_log_config_arn": "arn:aws:logs:us-east-1:111111111111:realtime-log-config/my-distribution",
          "response_headers_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
          "smooth_streaming": true,
          "target_origin_id": "my-target-origin",
          "trusted_key_groups": [
            "1234567890abcdef1234567890abcdef"
          ],
          "trusted_signers": [
            "1234567890abcdef1234567890abcdef"
          ],
          "viewer_protocol_policy": "redirect-to-https"
        },
        "default_root_object": "index.html",
        "enabled": true,
        "http_version": "http2",
        "is_ipv6_enabled": true,
        "logging_config": {
          "bucket": "my-logs.s3.amazonaws.com",
          "include_cookies": true,
          "prefix": "myprefix"
        },
        "ordered_cache_behavior": [
          {
            "allowed_methods": [
              "GET",
              "HEAD"
            ],
            "cache_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "cached_methods": [
              "GET",
              "HEAD"
            ],
            "compress": true,
            "default_ttl": 3600,
            "field_level_encryption_id": "1234567890abcdef1234567890abcdef",
            "forwarded_values": {
              "cookies": {
                "forward": "none",
                "whitelisted_names": [
                  "*"
                ]
              },
              "headers": [
                "*"
              ],
              "query_string": false,
              "query_string_cache_keys": [
                "*"
              ]
            },
            "function_association": [
              {
                "event_type": "viewer-request",
                "function_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
              }
            ],
            "grpc_config": {
              "enabled": true
            },
            "lambda_function_association": [
              {
                "event_type": "origin-request",
                "include_body": true,
                "lambda_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
              }
            ],
            "max_ttl": 86400,
            "min_ttl": 0,
            "origin_request_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "path_pattern": "/images/*",
            "realtime_log_config_arn": "arn:aws:logs:us-east-1:111111111111:realtime-log-config/my-distribution",
            "response_headers_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "smooth_streaming": true,
            "target_origin_id": "my-target-origin",
            "trusted_key_groups": [
              "1234567890abcdef1234567890abcdef"
            ],
            "trusted_signers": [
              "1234567890abcdef1234567890abcdef"
            ],
            "viewer_protocol_policy": "redirect-to-https"
          }
        ],
        "origin": [
          {
            "connection_attempts": 3,
            "connection_timeout": 10,
            "custom_header": [
              {
                "name": "MyCustomHeader",
                "value": "MyCustomValue"
              }
            ],
            "custom_origin_config": {
              "http_port": 80,
              "https_port": 443,
              "origin_keepalive_timeout": 5,
              "origin_protocol_policy": "https-only",
              "origin_read_timeout": 30,
              "origin_ssl_protocols": [
                "TLSv1.2"
              ]
            },
            "domain_name": "origins.com",
            "origin_access_control_id": "1234567890abcdef1234567890abcdef",
            "origin_id": "my-origin",
            "origin_path": "/mypath",
            "origin_shield": {
              "enabled": true,
              "origin_shield_region": "us-east-1"
            },
            "s3_origin_config": {
              "origin_access_identity": "origin-access-identity/cloudfront/E127EXAMPLE51Z"
            }
          }
        ],
        "origin_group": [
          {
            "failover_criteria": {
              "status_codes": [
                500,
                502
              ]
            },
            "member": [
              {
                "origin_id": "my-origin"
              }
            ],
            "origin_id": "my-origin-group"
          }
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [
              "US",
              "CA",
              "GB"
            ],
            "restriction_type": "whitelist"
          }
        },
        "staging": true,
        "tags": {
          "Name": "my-distribution"
        },
        "viewer_certificate": {
          "acm_certificate_arn": "arn:aws:acm:us-east-1:111111111111:certificate/12345678-1234-1234-1234-123456789012",
          "cloudfront_default_certificate": true,
          "iam_certificate_id": "1234567890abcdef1234567890abcdef1234567890abcdef",
          "minimum_protocol_version": "TLSv1.2_2019",
          "ssl_support_method": "sni-only"
        },
        "web_acl_id": "arn:aws:wafv2:us-east-1:111111111111:regional/webacl/my-web-acl"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cloudfront_distribution.resource_22C949BF.domain_name, \\",\\", aws_cloudfront_distribution.resource_22C949BF.id])}",
      "type": "string"
    }
  }
}"
`;

exports[`CloudFront > Should map AWS::CloudFront::Distribution 2`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudfront_distribution": {
      "resource_22C949BF": {
        "aliases": [
          "aliases.com",
          "example.com"
        ],
        "comment": "My CloudFront distribution",
        "continuous_deployment_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
        "custom_error_response": [
          {
            "error_caching_min_ttl": 300,
            "error_code": 404,
            "response_code": 200,
            "response_page_path": "/index.html"
          }
        ],
        "default_cache_behavior": {
          "allowed_methods": [
            "GET",
            "HEAD"
          ],
          "cache_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
          "cached_methods": [
            "GET",
            "HEAD"
          ],
          "compress": true,
          "default_ttl": 3600,
          "field_level_encryption_id": "1234567890abcdef1234567890abcdef",
          "forwarded_values": {
            "cookies": {
              "forward": "none",
              "whitelisted_names": [
                "*"
              ]
            },
            "headers": [
              "*"
            ],
            "query_string": false,
            "query_string_cache_keys": [
              "*"
            ]
          },
          "function_association": [
            {
              "event_type": "viewer-request",
              "function_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
            }
          ],
          "grpc_config": {
            "enabled": true
          },
          "lambda_function_association": [
            {
              "event_type": "origin-request",
              "include_body": true,
              "lambda_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
            }
          ],
          "max_ttl": 86400,
          "min_ttl": 0,
          "origin_request_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
          "realtime_log_config_arn": "arn:aws:logs:us-east-1:111111111111:realtime-log-config/my-distribution",
          "response_headers_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
          "smooth_streaming": true,
          "target_origin_id": "my-target-origin",
          "trusted_key_groups": [
            "1234567890abcdef1234567890abcdef"
          ],
          "trusted_signers": [
            "1234567890abcdef1234567890abcdef"
          ],
          "viewer_protocol_policy": "redirect-to-https"
        },
        "default_root_object": "index.html",
        "enabled": true,
        "http_version": "http2",
        "is_ipv6_enabled": true,
        "logging_config": {
          "bucket": "my-logs.s3.amazonaws.com",
          "include_cookies": true,
          "prefix": "myprefix"
        },
        "ordered_cache_behavior": [
          {
            "allowed_methods": [
              "GET",
              "HEAD"
            ],
            "cache_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "cached_methods": [
              "GET",
              "HEAD"
            ],
            "compress": true,
            "default_ttl": 3600,
            "field_level_encryption_id": "1234567890abcdef1234567890abcdef",
            "forwarded_values": {
              "cookies": {
                "forward": "none",
                "whitelisted_names": [
                  "*"
                ]
              },
              "headers": [
                "*"
              ],
              "query_string": false,
              "query_string_cache_keys": [
                "*"
              ]
            },
            "function_association": [
              {
                "event_type": "viewer-request",
                "function_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
              }
            ],
            "grpc_config": {
              "enabled": true
            },
            "lambda_function_association": [
              {
                "event_type": "origin-request",
                "include_body": true,
                "lambda_arn": "arn:aws:lambda:us-east-1:111111111111:function:my-function"
              }
            ],
            "max_ttl": 86400,
            "min_ttl": 0,
            "origin_request_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "path_pattern": "/images/*",
            "realtime_log_config_arn": "arn:aws:logs:us-east-1:111111111111:realtime-log-config/my-distribution",
            "response_headers_policy_id": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "smooth_streaming": true,
            "target_origin_id": "my-target-origin",
            "trusted_key_groups": [
              "1234567890abcdef1234567890abcdef"
            ],
            "trusted_signers": [
              "123"
            ],
            "viewer_protocol_policy": "redirect-to-https"
          }
        ],
        "origin": [
          {
            "connection_attempts": 3,
            "connection_timeout": 10,
            "custom_header": [
              {
                "name": "MyCustomHeader",
                "value": "MyCustomValue"
              }
            ],
            "custom_origin_config": {
              "http_port": 80,
              "https_port": 443,
              "origin_keepalive_timeout": 5,
              "origin_protocol_policy": "https-only",
              "origin_read_timeout": 30,
              "origin_ssl_protocols": [
                "TLSv1.2"
              ]
            },
            "domain_name": "example.com",
            "origin_access_control_id": "1234567890abcdef1234567890abcdef",
            "origin_id": "my-origin",
            "origin_path": "/mypath",
            "origin_shield": {
              "enabled": true,
              "origin_shield_region": "us-east-1"
            },
            "s3_origin_config": {
              "origin_access_identity": "origin-access-identity/cloudfront/E127EXAMPLE51Z"
            }
          }
        ],
        "origin_group": [
          {
            "failover_criteria": {
              "status_codes": [
                500,
                502
              ]
            },
            "member": [
              {
                "origin_id": "my-origin"
              }
            ],
            "origin_id": "my-origin-group"
          }
        ],
        "price_class": "PriceClass_100",
        "restrictions": {
          "geo_restriction": {
            "locations": [
              "US",
              "CA",
              "GB"
            ],
            "restriction_type": "whitelist"
          }
        },
        "staging": true,
        "tags": {
          "Name": "my-distribution"
        },
        "viewer_certificate": {
          "acm_certificate_arn": "arn:aws:acm:us-east-1:111111111111:certificate/12345678-1234-1234-1234-123456789012",
          "cloudfront_default_certificate": true,
          "iam_certificate_id": "1234567890abcdef1234567890abcdef1234567890abcdef",
          "minimum_protocol_version": "TLSv1.2_2019",
          "ssl_support_method": "sni-only"
        },
        "web_acl_id": "arn:aws:wafv2:us-east-1:111111111111:regional/webacl/my-web-acl"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cloudfront_distribution.resource_22C949BF.domain_name, \\",\\", aws_cloudfront_distribution.resource_22C949BF.id])}",
      "type": "string"
    }
  }
}"
`;
